--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,13 +1,13 @@
 <section class="relative w-full h-150 flex items-center justify-center font-display text-black">
   <!-- Imagen en la esquina superior izquierda -->
   <div class="absolute top-5 left-5 md:left-35  ">
-    <img src="../../public/w.webp" alt="William Opazo" class="w-16 h-16 rounded-full">
+    <img src="../../public/w.jpg" alt="William Opazo" class="w-16 h-16 rounded-full">
   </div>
   
   <!-- Contenido centrado -->
   <div class="flex flex-col items-center justify-center w-full h-80">
     <div class="flex flex-col md:flex-row items-center">
-      <img src="../../public/perfil.jpeg" alt="William Opazo" class="w-40 h-40 rounded-[50%] lg:mr-5">  
+      <img src="../../public/perfil.jpg" alt="William Opazo" class="w-40 h-40 rounded-[50%] lg:mr-5">  
       <div class="text-center md:text-left">
         <h1 class="text-4xl font-bold">William Opazo Esquivel</h1>
         <h4 class="text-2xl">Software Engineer</h4>
