--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,7 +1,7 @@
 <section class="relative w-full h-150 flex items-center justify-center font-display text-black">
   <!-- Imagen en la esquina superior izquierda -->
   <div class="absolute top-5 left-5 md:left-35  ">
-    <img src="public/w.jpg" alt="William Opazo" class="w-16 h-16 rounded-full">
+    <img src="w.jpg" alt="William Opazo" class="w-16 h-16 rounded-full">
   </div>
   
   <!-- Contenido centrado -->
