--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -18,58 +18,20 @@
                     </button>
                 </div>
                 <!-- Texto alineado arriba -->
-                <div class="w-full md:w-2/3 mt-4  text-left md: md:mt-0">
-                    <h2 class="text-xl md:text-4xl font-bold">Libros para programadores</h2>
-                    <p class="h-full mt-2 text-xl text-gray-600">
-                        Descripción: Esta página web, dedicada a ofrecer una selección de libros recomendados para programadores, fue creada con las siguientes tecnologías.
-                        Esta es una página web dedicada a ofrecer una selección de libros recomendados para programadores.
-                        Fue construida utilizando Astro para la gestión de contenidos, Tailwind CSS para un diseño limpio y responsivo, y Markdown (MD) para la fácil
-                        integración de textos. La página está alojada en Vercel, asegurando un rendimiento rápido y eficiente.
-                    </p>
+                <div class="w-full md:w-2/3 text-xs md:text-xl mt-4 text-left md:mt-0">
+                    <h2 class="md:text-4xl text-center md:text-left text-2xl font-bold">Libros para programadores</h2>
+                    <section class="h-full mt-2 font-bold ">
+                        <p class="text-justify">
+                            Esta página web, dedicada a ofrecer una selección de libros recomendados para programadores, fue creada con las siguientes tecnologías.
+                            Fue construida utilizando Astro para la gestión de contenidos, Tailwind CSS para un diseño limpio y responsivo, y Markdown (MD) para la fácil
+                            integración de textos. La página está alojada en Vercel, asegurando un rendimiento rápido y eficiente.
+                        </p>
+                    </section>
                 </div>
             </div>
 
             <!-- Elemento 2 -->
-            <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
-                <!-- Imagen y botón -->
-                <div class="flex flex-col items-center w-full md:w-1/4">
-                    <img src="libro.jpg" alt="Imagen proyecto" class="w-32 h-32 md:w-48 md:h-48 rounded-lg shadow-md object-cover">
-                    <button class="mt-4 px-4 py-2 text-xs md:text-2xl bg-pink-500 text-white rounded-lg hover:bg-yellow-400">
-                        <a href="https://libreria-one.vercel.app/">ver demo</a>
-                    </button>
-                </div>
-                <!-- Texto alineado arriba -->
-                <div class="w-full md:w-2/3 mt-4  text-left md: md:mt-0">
-                    <h2 class="text-xl md:text-4xl font-bold">Libros para programadores</h2>
-                    <p class="h-full mt-2 text-xl text-gray-600">
-                        Descripción: Esta página web, dedicada a ofrecer una selección de libros recomendados para programadores, fue creada con las siguientes tecnologías.
-                        Esta es una página web dedicada a ofrecer una selección de libros recomendados para programadores.
-                        Fue construida utilizando Astro para la gestión de contenidos, Tailwind CSS para un diseño limpio y responsivo, y Markdown (MD) para la fácil
-                        integración de textos. La página está alojada en Vercel, asegurando un rendimiento rápido y eficiente.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Elemento 3 -->
-            <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
-                <!-- Imagen y botón -->
-                <div class="flex flex-col items-center w-full md:w-1/4">
-                    <img src="libro.jpg" alt="Imagen proyecto" class="w-32 h-32 md:w-48 md:h-48 rounded-lg shadow-md object-cover">
-                    <button class="mt-4 px-4 py-2 text-xs md:text-2xl bg-pink-500 text-white rounded-lg hover:bg-yellow-400">
-                        <a href="https://libreria-one.vercel.app/">ver demo</a>
-                    </button>
-                </div>
-                <!-- Texto alineado arriba -->
-                <div class="w-full md:w-2/3 mt-4  text-left md: md:mt-0">
-                    <h2 class="text-xl md:text-4xl font-bold">Libros para programadores</h2>
-                    <p class="h-full mt-2 text-xl text-gray-600">
-                        Descripción: Esta página web, dedicada a ofrecer una selección de libros recomendados para programadores, fue creada con las siguientes tecnologías.
-                        Esta es una página web dedicada a ofrecer una selección de libros recomendados para programadores.
-                        Fue construida utilizando Astro para la gestión de contenidos, Tailwind CSS para un diseño limpio y responsivo, y Markdown (MD) para la fácil
-                        integración de textos. La página está alojada en Vercel, asegurando un rendimiento rápido y eficiente.
-                    </p>
-                </div>
-            </div>
+           
         </div>
     </div>
 </section>
