--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -12,13 +12,13 @@
             <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
                 <!-- Imagen y botón -->
                 <div class="flex flex-col items-center w-full md:w-1/4">
-                    <img src="libro.jpg" alt="Imagen proyecto" class="w-32 h-32 md:w-48 md:h-48 rounded-lg shadow-md object-cover">
+                    <img src="libro.jpg" alt="Imagen proyecto" class="w-[100%] h-40 md:w-48 md:h-48 rounded-lg shadow-md object-cover">
                     <button class="mt-4 px-4 py-2 text-xs md:text-2xl bg-pink-500 text-white rounded-lg hover:bg-yellow-400">
                         <a href="https://libreria-one.vercel.app/">ver demo</a>
                     </button>
                 </div>
                 <!-- Texto alineado arriba -->
-                <div class="w-full md:w-2/3 text-xs md:text-xl mt-4 text-left md:mt-0">
+                <div class="w-full md:w-2/3 text-xs md:text-xl text-left md:mt-0">
                     <h2 class="md:text-4xl text-center md:text-left text-2xl font-bold">Libros para programadores</h2>
                     <section class="h-full mt-2 font-bold ">
                         <p class="text-justify">
