--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,7 +1,8 @@
 <section class="relative w-full h-150 flex items-center justify-center font-display text-black">
-  <!-- Imagen en la esquina superior izquierda -->
-  <div class="absolute top-5 left-10 md:left-47  ">
-    <img src="w.jpg" alt="William Opazo" class="w-20 h-20 rounded-full">
+  <!-- Imagen en la esquina superior izquierda, moviéndose responsivamente -->
+  <div class="absolute top-5 left-[calc(2vw+10.5%)]">
+    <img src="w.jpg" alt="William Opazo" 
+         class="w-16 h-16 lg:w-20 lg:h-20 rounded-full object-cover">
   </div>
   
   <!-- Contenido centrado -->
