--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import Footer from "../components/Footer.astro";
 import Intro from "../components/Intro.astro";
 import Content from "../components/Content.astro";
+import About from "../components/About.astro";
 ---
 <!doctype html>
 <html lang="en">
@@ -16,6 +17,7 @@ import Content from "../components/Content.astro";
 	<body>
 		<Intro/>
         <Content/>
+        <About/>
 		<slot />
 	</body>
 </html>
