--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,9 +5,9 @@
     </div>
 
     <!-- Contenedor de las tecnologías centrado -->
-    <div class="w-full flex justify-center items-center py-8">
-        <div class="w-[75%]">
-            <div class=" mb-8">
+    <div class="flex justify-center items-center py-8 ">
+        <div class="w-[80%] bg-amarillo ">
+            <div class=" mb-8 ">
                 <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla ad amet praesentium eaque ut voluptatum dolores asperiores fugiat labore tempora aliquid provident, quas soluta optio nihil quae assumenda laborum excepturi.</h1>
             </div>
 
