--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -6,10 +6,10 @@
 
     <!-- Contenedor principal -->
     <div class="w-full flex items-center justify-center">
-        <div class="w-full md:w-[80%] flex flex-col items-center gap-6 p-4">
+        <div class="w-full md:w-full flex flex-col items-center gap-6 ">
             
             <!-- Elemento 1 -->
-            <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
+            <div class="bg-white p-6 rounded-lg shadow-md w-[80%]  flex flex-col md:flex-row items-center md:items-start gap-4">
                 <!-- Imagen y botón -->
                 <div class="flex flex-col items-center w-full md:w-1/4">
                     <img src="libro.jpg" alt="Imagen proyecto" class="w-[100%] h-40 md:w-48 md:h-48 rounded-lg shadow-md object-containt">
@@ -31,7 +31,7 @@
             </div>
 
             <!-- Elemento 2 -->
-            <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
+            <div class="bg-white p-6 rounded-lg shadow-md w-[80%] flex flex-col md:flex-row items-center md:items-start gap-4">
                 <!-- Imagen y botón -->
                 <div class="flex flex-col items-center w-full md:w-1/4">
                     <img src="libro.jpg" alt="Imagen proyecto" class="w-[100%] h-40 md:w-48 md:h-48 rounded-lg shadow-md object-containt">
@@ -53,7 +53,7 @@
             </div>
 
             <!-- Elemento 3 -->
-            <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
+            <div class="bg-white p-6 rounded-lg shadow-md w-[80%]  flex flex-col md:flex-row items-center md:items-start gap-4">
                 <!-- Imagen y botón -->
                 <div class="flex flex-col items-center w-full md:w-1/4">
                     <img src="libro.jpg" alt="Imagen proyecto" class="w-[100%] h-40 md:w-48 md:h-48 rounded-lg shadow-md object-containt">
@@ -75,7 +75,7 @@
             </div>
 
             <!-- Elemento 4 -->
-            <div class="bg-white p-6 rounded-lg shadow-md w-[calc(100%-40px)] md:max-w-7xl flex flex-col md:flex-row items-center md:items-start gap-4">
+            <div class="bg-white p-6 rounded-lg shadow-md w-[80%] flex flex-col md:flex-row items-center md:items-start gap-4">
                 <!-- Imagen y botón -->
                 <div class="flex flex-col items-center w-full md:w-1/4">
                     <img src="libro.jpg" alt="Imagen proyecto" class="w-[100%] h-40 md:w-48 md:h-48 rounded-lg shadow-md object-containt">
