--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,8 +5,8 @@
     </div>
 
     <!-- Contenedor de las tecnologías centrado -->
-    <div class="flex justify-center items-center py-8 ">
-        <div class="w-[80%] bg-amarillo ">
+    <div class="flex justify-center items-center py-8">
+        <div class="w-[80%] bg-white  p-4 rounded-lg shadow-lg">
             <div class=" mb-8 ">
                 <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla ad amet praesentium eaque ut voluptatum dolores asperiores fugiat labore tempora aliquid provident, quas soluta optio nihil quae assumenda laborum excepturi.</h1>
             </div>
