--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,9 +1,8 @@
+---
+import Nav from "./Nav.astro"
+---
+<Nav/>
 <section class="relative w-full h-150 flex items-center justify-center font-display text-black">
-  <!-- Imagen en la esquina superior izquierda, moviéndose responsivamente -->
-  <div class="absolute top-5 left-[calc(2vw+10.5%)]">
-    <img src="w.jpg" alt="William Opazo" 
-         class="w-16 h-16 lg:w-20 lg:h-20 rounded-full object-cover">
-  </div>
   
   <!-- Contenido centrado -->
   <div class="flex flex-col items-center justify-center w-full h-80">
