--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,8 @@ import About from "../components/About.astro";
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="w.jpg" />
+        <!-- Font Awesome CDN -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">  
 		<meta name="generator" content={Astro.generator} />
 		<title>Portafolio</title>
 	</head>
@@ -21,6 +23,7 @@ import About from "../components/About.astro";
 		<slot />
 	</body>
 </html>
+
 <style>
     /* Solo importa la fuente Exo */
     @import url('https://fonts.googleapis.com/css?family=Exo:100');
