--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,18 +9,24 @@
         <ul class="flex space-x-6">
             <!-- Icono de GitHub -->
             <li>
-                <a href="https://github.com" target="_blank" class="text-4xl hover:text-rosado">
+                <a href="https://github.com/william-Oz02?tab=repositories" target="_blank" class="text-4xl hover:text-rosado">
                     <i class="fab fa-github"></i> <!-- Icono GitHub -->
                 </a>
             </li>
 
             <!-- Icono de LinkedIn -->
             <li>
-                <a href="https://linkedin.com" target="_blank" class="text-4xl hover:text-rosado">
+                <a href="https://www.linkedin.com/in/william-opazo-esquivel-910570236/" target="_blank" class="text-4xl hover:text-rosado">
                     <i class="fab fa-linkedin"></i> <!-- Icono LinkedIn -->
                 </a>
             </li>
 
+            <!-- Icono de Gmail -->
+            <li>
+                <a href="https://mail.google.com/" target="_blank" class="text-4xl hover:text-rosado">
+                    <i class="fas fa-envelope"></i> <!-- Icono Gmail -->
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
