--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -14,7 +14,7 @@
                 <div class="flex flex-col items-center w-full md:w-1/4">
                     <img src="libro.jpg" alt="Imagen proyecto" class="w-[100%] h-40 md:w-48 md:h-48 rounded-lg shadow-md object-containt">
                     <button class="mt-4 px-4 py-2 text-xs md:text-2xl bg-pink-500 text-white rounded-lg hover:bg-yellow-400">
-                        <a href="https://libreria-one.vercel.app/">ver demo</a>
+                        <a href="https://libreria-one.vercel.app/" target="_blank">ver demo</a>
                     </button>
                 </div>
                 <!-- Texto alineado arriba -->
