--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -14,8 +14,8 @@ import Nav from "./Nav.astro"
 
         <!-- Botón debajo de "Software Engineer" -->
         <div class="mt-4">
-          <a href="#contacto" class="px-6 py-2 bg-rosado text-white rounded-lg text-lg font-semibold hover:bg-amarillo transition">
-            Descarga mi CV
+          <a href="william-opazo-cv.pdf" download="william-opazo-cv.pdf" class="px-6 py-2 bg-rosado text-white rounded-lg text-lg font-semibold hover:bg-amarillo transition">
+            Descarga mi CV <i class="fas fa-download"></i>
           </a>
         </div>
       </div>
