--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -2,19 +2,19 @@
 import Nav from "./Nav.astro"
 ---
 <Nav/>
-<section class="relative w-full h-150 flex items-center justify-center font-display text-black">
+<section class="relative w-full h-150 flex items-center justify-center font-display text-black animate-jump-in">
   
   <!-- Contenido centrado -->
   <div class="flex flex-col items-center justify-center w-full h-80">
     <div class="flex flex-col md:flex-row items-center">
       <img src="perfil.jpg" alt="William Opazo" class="w-50 h-50 rounded-[50%] lg:mr-5">  
       <div class="text-center md:text-left mt-4 font-bold">
-        <h1 class="text-2xl md:text-4xl">William Opazo Esquivel</h1>
+        <h1 class="text-2xl md:text-4xl ">William Opazo Esquivel</h1>
         <h4 class="text-xl md:text-2xl">Software Engineer</h4>
 
         <!-- Botón debajo de "Software Engineer" -->
-        <div class="mt-4">
-          <a href="william-opazo-cv.pdf" download="william-opazo-cv.pdf" class="px-6 py-2 bg-rosado text-white rounded-lg text-lg font-semibold hover:bg-amarillo transition">
+        <div class="mt-4 hover:animate-shake">
+          <a href="william-opazo-cv.pdf" download="william-opazo-cv.pdf" class="px-6 py-2 bg-rosado text-white rounded-lg text-lg font-semibold hover:bg-amarillo transition ">
             Descarga mi CV <i class="fas fa-download"></i>
           </a>
         </div>
