--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,23 +6,23 @@
         </div>
 
         <!-- Menú de redes sociales -->
-        <ul class="flex space-x-6">
+        <ul class="flex space-x-6 ">
             <!-- Icono de GitHub -->
-            <li>
-                <a href="https://github.com/william-Oz02?tab=repositories" target="_blank" class="text-4xl hover:text-rosado">
+            <li class="hover:animate-jump">
+                <a href="https://github.com/william-Oz02?tab=repositories" target="_blank" class="text-4xl hover:text-rosado ">
                     <i class="fab fa-github"></i> <!-- Icono GitHub -->
                 </a>
             </li>
 
             <!-- Icono de LinkedIn -->
-            <li>
+            <li class="hover:animate-jump">
                 <a href="https://www.linkedin.com/in/william-opazo-esquivel-910570236/" target="_blank" class="text-4xl hover:text-rosado">
                     <i class="fab fa-linkedin"></i> <!-- Icono LinkedIn -->
                 </a>
             </li>
 
             <!-- Icono de Gmail -->
-            <li>
+            <li class="hover:animate-jump">
                 <a href="https://mail.google.com/" target="_blank" class="text-4xl hover:text-rosado">
                     <i class="fas fa-envelope"></i> <!-- Icono Gmail -->
                 </a>
