--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -43,9 +43,7 @@
                     <h2 class="md:text-4xl text-center md:text-left text-2xl font-bold">Tienda de guitarras</h2>
                     <section class="h-full mt-2 font-bold ">
                         <p class="text-justify">
-                            Esta página web, dedicada a ofrecer una selección de libros recomendados para programadores, fue creada con las siguientes tecnologías.
-                            Fue construida utilizando Astro para la gestión de contenidos, Tailwind CSS para un diseño limpio y responsivo, y Markdown (MD) para la fácil
-                            integración de textos. La página está alojada en Vercel, asegurando un rendimiento rápido y eficiente.
+                            Proyecto de tienda de guitarras, con un diseño limpio y responsivo, desarrollado con React y Bootstrap. React permite una experiencia de usuario dinámica y eficiente gracias a su enfoque basado en componentes, mientras que Bootstrap aporta un diseño moderno y adaptable a diferentes dispositivos, asegurando una navegación fluida tanto en computadoras como en dispositivos móviles.
                         </p>
                     </section>
                 </div>
