--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -23,7 +23,7 @@
 
             <!-- Icono de Gmail -->
             <li class="hover:animate-jump">
-                <a href="https://mail.google.com/" target="_blank" class="text-4xl hover:text-rosado">
+                <a href="mailto:williamopazo002@gmail.com" target="_blank" class="text-4xl hover:text-rosado">
                     <i class="fas fa-envelope"></i> <!-- Icono Gmail -->
                 </a>
             </li>
