--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,9 +5,9 @@
     </div>
 
     <!-- Contenedor de las tecnologías centrado -->
-    <div class="flex justify-center items-center py-8">
-        <div class="w-[80%] bg-white  p-4 rounded-lg shadow-lg">
-            <div class="mb-8 w-[80%]  mx-auto font-bold">
+    <div class="flex justify-center items-center ">
+        <div class="w-[80%] bg-white rounded-lg shadow-lg">
+            <div class="mb-4 w-[80%] mt-4 mx-auto font-bold">
                 <h1>Soy ingeniero en informática con una gran pasión por la tecnología. Me especializo en el desarrollo front-end web y móvil, creando soluciones innovadoras y eficientes. Disfruto enfrentar nuevos desafíos y mantenerme actualizado con las últimas tendencias en el mundo del desarrollo, buscando siempre mejorar mis habilidades.</h1>
             </div>
 
